feat(privacy): complete privacy policy comfirmation on register page
- 新增后端注册时的隐私政策版本确认，完善注册逻辑
- 新增前端处理隐私政策版本不一致问题逻辑，需要用户手动重新确认
